hw06/test/zm-array-init-stm-explist-error.fmj
public int main() {
  int[] n;
  int[] n2;
  int a=0;
  int b=1;
  n[] = {a, n2}; // error
  return n[0];
}